Hide all empty br and p elements in components (helps fix some whitespace issues in WordPress)

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,10 @@
+/* ======= RESET ======= */
+
+*[class^="cl-"] br:empty,
+*[class^="cl-"] p:empty {
+    display: none;
+}
+
 /* ======= VARIABLES ======= */
 
 
